<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">The Pharma Best</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="datee">Last updated: May 05, 2022</string>
    <string name="message">Please read these terms and conditions carefully before using Our Service.</string>
    <string name="termsConditions">These are the Terms and Conditions governing the use of this Service and the agreement that operates between You and the Company. These Terms and Conditions set out the rights and obligations of all users regarding the use of the Service. Your access to and use of the Service is conditioned on Your acceptance of and compliance with these Terms and Conditions. These Terms and Conditions apply to all visitors, users and others who access or use the Service. By accessing or using the Service You agree to be bound by these Terms and Conditions. If You disagree with any part of these Terms and Conditions then You may not access the Service. You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service. Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your personal information when You use the Application or the Website and tells You about Your privacy rights and how the law protects You. Please read Our Privacy Policy carefully before using Our Service.</string>
    <string name="someMoreMesg">The Service is provided to You AS IS and android:AS AVAILABLE and with all faults and defects without warranty of any kind. To the maximum extent permitted under applicable law, the Company, on its own behalf and on behalf of its Affiliates and its and their respective licensors and service providers, expressly disclaims all warranties, whether express, implied, statutory or otherwise, with respect to the Service, including all implied warranties of merchantability, fitness for a particular purpose, title and non-infringement, and warranties that may arise out of course of dealing, course of performance, usage or trade practice. Without limitation to the foregoing, the Company provides no warranty or undertaking, and makes no representation of any kind that the Service will meet Your requirements, achieve any intended results, be compatible or work with any other software, applications, systems or services, operate without interruption, meet any performance or reliability standards or be error free or that any errors or defects can or will be corrected. Without limiting the foregoing, neither the Company nor any of the company\'s provider makes any representation or warranty of any kind, express or implied: (i) as to the operation or availability of the Service, or the information, content, and materials or products included thereon; (ii) that the Service will be uninterrupted or error-free; (iii) as to the accuracy, reliability, or currency of any information or content provided through the Service; or (iv) that the Service, its servers, the content, or e-mails sent from or on behalf of the Company are free of viruses, scripts, trojan horses, worms, malware, timebombs or other harmful components.</string>
    <string name="changings">We reserve the right, at Our sole discretion, to modify or replace these Terms at any time. If a revision is material We will make reasonable efforts to provide at least 30 days\' notice prior to any new terms taking effect. What constitutes a material change will be determined at Our sole discretion. By continuing to access or use Our Service after those revisions become effective, You agree to be bound by the revised terms. If You do not agree to the new terms, in whole or in part, please stop using the website and the Service.</string>
    <string name="termss">Changes to These Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="queriesMsg">If you have any questions about these Terms and Conditions, You can contact us:</string>
    <string name="mailAddress">By email: 205366@aack.au.edu.pk</string>
    <string name="health">Health</string>
    <string name="madicalid">Medical ID</string>
    <string name="medical_id">Medical ID</string>
    <string name="settings">Settings</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_access">EMERGENCY ACCESS</string>
    <string name="show_when_locked">Show When Locked</string>
    <string name="defAsthma">Asthma is a condition in which your airways narrow and swell and may produce extra mucus. This can make breathing difficult and trigger coughing, a whistling sound (wheezing) when you breathe out and shortness of breath.</string>
    <string name="sympo">Asthma symptoms vary from person to person. You may have infrequent asthma attacks, have symptoms only at certain times — such as when exercising — or have symptoms all the time. Asthma signs and symptoms include: Shortness of breath Chest tightness or pain Wheezing when exhaling, which is a common sign of asthma in children Trouble sleeping caused by shortness of breath, coughing or wheezing Coughing or wheezing attacks that are worsened by a respiratory virus, such as a cold or the flu</string>
    <string name="t1Asthma">For some people, asthma signs and symptoms flare up in certain situations:</string>
    <string name="t2Asthma">Exercise-induced asthma, which may be worse when the air is cold and dry</string>
    <string name="t3Asthma">Occupational asthma, triggered by workplace irritants such as chemical fumes, gases or dust</string>
    <string name="t4Asthma">Allergy-induced asthma, triggered by airborne substances, such as pollen, mold spores, cockroach waste, or particles of skin and dried saliva shed by pets (pet dander)</string>
    <string name="t5Asthma">Asthma can\'t be cured, but its symptoms can be controlled. Because asthma often changes over time, it\'s important that you work with your doctor to track your signs and symptoms and adjust your treatment as needed.</string>
    <string name="t6Asthma">Signs that your asthma is probably worsening include:</string>
    <string name="t7Asthma">1- Asthma signs and symptoms that are more frequent and bothersome</string>
    <string name="t8Asthma">2- Increasing difficulty breathing, as measured with a device used to check how well your lungs are working (peak flow meter)</string>
    <string name="t9Asthma">3- The need to use a quick-relief inhaler more often</string>
    <string name="t1Infection">Adenoviruses are a group of common viruses that infect the lining of your eyes, airways and lungs, intestines, urinary tract, and nervous system. They\'re common causes of fever, coughs, sore throats, diarrhea, and pink eye.</string>
    <string name="txt2Infec">Antibiotics won\'t help adenovirus infections because these drugs only kill bacteria. Children often get over the illness on their own within a few days. Some infections, like pink eye or pneumonia, can last for a week or more.</string>
    <string name="txt3Infec">You can do some things to help your child feel better:</string>
    <string name="txt4Infec">Kids lose fluids from fever, vomiting, and diarrhea. They can get dehydrated. Water or 100% fruit juice are the best choices to keep kids hydrated. You might also try a children\'s solution that has electrolytes.</string>
    <string name="txt5Infec">Help your child blow their nose often. For an infant, put a few drops of saline spray or drops into their nose. Then suction out mucus with a bulb syringe.</string>
    <string name="txt6Infec">The moisture will loosen congestion and help your child breathe more easily.</string>
    <string name="txt8Infec">Ask your doctor if you can give your child acetaminophen (Tylenol) or ibuprofen (Motrin) to relieve aches and fever. Don\'t give children products that contain aspirin, which can lead to a rare but serious condition called Reye syndrome.</string>

    <string-array name="languages">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
</resources>