<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3CDCD"
    tools:context=".termsClass">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D3CDCD"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp"
            tools:ignore="ExtraText">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/datee"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:text="@string/message"
                android:textColor="#3F51B5"
                android:padding="2dp"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/termsConditions"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/someMoreMesg"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/termss"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:text="@string/changings"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:padding="2dp"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:padding="2dp"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:text="@string/queriesMsg"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:padding="2dp"
                android:layout_height="wrap_content"
                android:background="#D3CDCD"
                android:fontFamily="sans-serif"
                android:text="@string/mailAddress"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>